# QtVideoWriter

./: CMakeLists.txt  FFmpegLauncher.h  ImageWriter.h  README.md  VideoWriter.h
sample/: SigKillHandler.cpp  SigKillHandler.h  main.cpp
sample/resources/: sample.qrc
src/: FFmpegLauncher.cpp  ImageWriter.cpp
